test/classes/deitz/test_bad_function_noparens.good
Error: Non-member functions must have parenthesized argument lists (test_bad_function_noparens.chpl:1)

