test/classes/deitz/test_bad_function_noparens.chpl
function bar {
  writeln("this is not allowed");
}

bar;
